--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.AndroidProjectOne"
         tools:targetApi="31">
         <activity
+            android:name=".BackgroundImage"
+            android:exported="false"
+            android:label="@string/title_activity_background_image"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
+            android:name=".LogInActivity"
+            android:exported="false"
+            android:label="@string/title_activity_log_in"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
