--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.AndroidProjectOne"
         tools:targetApi="31">
         <activity
+            android:name=".RowCardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_row_card"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
+            android:name=".CardActivity"
+            android:exported="false"
+            android:label="@string/title_activity_card"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
             android:name=".ScrollActivity"
             android:exported="false"
             android:label="@string/title_activity_scroll"
