--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
         android:theme="@style/Theme.AndroidProjectOne"
         tools:targetApi="31">
         <activity
+            android:name=".WhatsAppActivity"
+            android:exported="false"
+            android:label="@string/title_activity_whats_app"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
+            android:name=".TopBarActivity"
+            android:exported="false"
+            android:label="@string/title_activity_top_bar"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
             android:name=".RowCardActivity"
             android:exported="false"
             android:label="@string/title_activity_row_card"
