--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
         android:theme="@style/Theme.AndroidProjectOne"
         tools:targetApi="31">
         <activity
+            android:name=".FridayWanderlyEvaluationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_friday_wanderly_evaluation"
+            android:theme="@style/Theme.AndroidProjectOne" />
+        <activity
             android:name=".BottomAppBarActivity"
             android:exported="false"
             android:label="@string/title_activity_bottom_app_bar"
